task/external-authorization/custom/ext-authz-custom.yaml
# Copyright Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

# Example configurations for deploying ext-authz server separately in the mesh.

apiVersion: v1
kind: Service
metadata:
  name: custom-authz
  labels:
    app: custom-authz
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: custom-authz
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-authz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: custom-authz
  template:
    metadata:
      labels:
        app: custom-authz
    spec:
      containers:
      - image: kakaru/xauth:0.0.3
        imagePullPolicy: IfNotPresent
        name: custom-authz
        ports:
        - containerPort: 8080
